--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="loading">
+        <img id="loading-gif" src="image/loading.gif" alt="loading" style="width: 100%; height: 100%;">
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
